--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -39,6 +39,7 @@
     "@backstage/plugin-search-backend-module-techdocs": "^0.3.1",
     "@backstage/plugin-techdocs-backend": "^1.11.1",
     "@janus-idp/backstage-plugin-rbac-backend": "*",
+    "@janus-idp/backstage-plugin-rules-backend": "*",
     "@manypkg/get-packages": "1.1.3",
     "app": "*",
     "winston": "3.11.0",
