--- a/plugins/rules-backend/package.json
+++ b/plugins/rules-backend/package.json
@@ -46,8 +46,11 @@
     "@backstage/backend-plugin-manager": "npm:@janus-idp/backend-plugin-manager@0.0.2-janus.5",
     "@backstage/config": "^1.2.0",
     "@types/express": "^*",
+    "axios": "^1.6.4",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
+    "fs-extra": "^10.1.0",
+    "js-yaml": "^3.13.1",
     "node-fetch": "^2.6.7",
     "winston": "^3.2.1",
     "yn": "^4.0.0"
