--- a/plugins/rules/package.json
+++ b/plugins/rules/package.json
@@ -33,16 +33,20 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@patternfly/patternfly": "^5.1.0",
-    "@patternfly/react-charts": "^7.1.1",
-    "@patternfly/react-code-editor": "^5.3.3",
-    "@patternfly/react-core": "^5.1.2",
-    "@patternfly/react-icons": "^5.1.1",
-    "@patternfly/react-tokens": "^5.1.2",
-    "react-use": "^17.2.4"
+    "@patternfly/patternfly": "^5.4.0",
+    "@patternfly/react-charts": "^7.4.0",
+    "@patternfly/react-code-editor": "^5.4.0",
+    "@patternfly/react-core": "^5.4.0",
+    "@patternfly/react-icons": "^5.4.0",
+    "@patternfly/react-tokens": "^5.4.0",
+    "@patternfly/react-table": "^5.4.0",
+    "@patternfly/react-styles": "^5.4.0",
+    "react-use": "^17.2.4",
+    "@kie-tools/yard-editor": "^0.32.0"
   },
   "peerDependencies": {
-    "react": "16.13.1 || ^17.0.0 || ^18.0.0"
+    "react": "16.13.1 || ^17.0.0 || ^18.0.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@backstage/cli": "0.26.4",
