--- a/plugins/rules-backend/turbo.json
+++ b/plugins/rules-backend/turbo.json
@@ -2,8 +2,7 @@
   "extends": ["//"],
   "tasks": {
     "tsc": {
-      "outputs": ["../../dist-types/plugins/rules/**"],
-      "dependsOn": ["^tsc"]
+      "outputs": ["../../dist-types/plugins/rules-backend/**"]
     }
   }
 }
