--- a/plugins/rules-backend/package.json
+++ b/plugins/rules-backend/package.json
@@ -11,7 +11,13 @@
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "backend-plugin"
+    "role": "backend-plugin",
+    "supported-versions": "1.32.5",
+    "pluginId": "rules",
+    "pluginPackages": [
+      "@janus-idp/backstage-plugin-rules",
+      "@janus-idp/backstage-plugin-rules-backend"
+    ]
   },
   "exports": {
     ".": "./src/index.ts",
@@ -20,30 +26,29 @@
   },
   "typesVersions": {
     "*": {
-      "alpha": [
-        "src/alpha.ts"
-      ],
       "package.json": [
         "package.json"
       ]
     }
   },
   "scripts": {
-    "build": "backstage-cli package build",
-    "clean": "backstage-cli package clean",
-    "export-dynamic": "janus-cli package export-dynamic-plugin",
-    "lint": "backstage-cli package lint",
-    "postpack": "backstage-cli package postpack",
-    "postversion": "yarn run export-dynamic",
-    "prepack": "backstage-cli package prepack",
     "start": "backstage-cli package start",
+    "build": "backstage-cli package build",
+    "tsc": "tsc",
+    "prettier:check": "prettier --ignore-unknown --check .",
+    "prettier:fix": "prettier --ignore-unknown --write .",
+    "lint:check": "backstage-cli package lint",
+    "lint:fix": "backstage-cli package lint --fix",
     "test": "backstage-cli package test --passWithNoTests --coverage",
-    "tsc": "tsc"
+    "clean": "backstage-cli package clean",
+    "prepack": "backstage-cli package prepack",
+    "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/backend-common": "^0.21.6",
-    "@backstage/backend-plugin-api": "^0.6.9",
-    "@backstage/backend-plugin-manager": "npm:@janus-idp/backend-plugin-manager@0.0.2-janus.5",
+    "@backstage/backend-defaults": "^0.5.2",
+    "@backstage/backend-plugin-api": "^1.0.1",
+    "@backstage/catalog-client": "^1.7.1",
+    "@backstage/catalog-model": "^1.7.0",
     "@backstage/config": "^1.2.0",
     "@types/express": "^*",
     "axios": "^1.6.4",
@@ -52,29 +57,28 @@
     "fs-extra": "^10.1.0",
     "js-yaml": "^3.13.1",
     "node-fetch": "^2.6.7",
-    "winston": "^3.2.1",
     "yn": "^4.0.0"
   },
   "devDependencies": {
-    "@backstage/cli": "0.26.4",
-    "@janus-idp/cli": "1.8.6",
-    "@types/supertest": "2.0.12",
-    "msw": "1.0.0",
-    "supertest": "6.2.4"
+    "@backstage/backend-test-utils": "1.0.2",
+    "@backstage/cli": "0.28.2",
+    "@types/express": "4.17.21",
+    "@types/supertest": "2.0.16",
+    "msw": "1.3.3",
+    "prettier": "3.3.3",
+    "supertest": "6.3.4"
   },
   "files": [
     "dist",
     "config.d.ts",
     "dist-dynamic/*.*",
     "dist-dynamic/dist/**",
-    "dist-dynamic/alpha/*",
     "app-config.janus-idp.yaml"
   ],
-  "configSchema": "config.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/janus-idp/backstage-plugins",
-    "directory": "plugins/rules"
+    "directory": "plugins/rules-backend"
   },
   "keywords": [
     "backstage",
